[gd_scene load_steps=8 format=2]

[ext_resource path="res://Player/Buffs/DblJumpBonus.gd" type="Script" id=1]
[ext_resource path="res://Common/Textures/DblJumpBonus.png" type="Texture" id=2]
[ext_resource path="res://Player/Buffs/bonus-reached.wav" type="AudioStream" id=3]
[ext_resource path="res://Menu/cat_theme.tres" type="Theme" id=4]

[sub_resource type="Shader" id=17]
code = "shader_type canvas_item;

const float PI = 3.141516;

uniform float speed = 1.;

uniform vec4 tint : hint_color = vec4(1., 1., 0., 1.);

uniform float span : hint_range(0.1, 1.) = .3;

float luminance(vec4 colour) {
	return 1.0 - sqrt(0.299*colour.r*colour.r + 0.587*colour.g*colour.g + 0.114*colour.b*colour.b);
}

void fragment() {
	vec4 colour = texture(TEXTURE, UV);
	float target = abs(sin(TIME * PI * speed) * (1. + span));
	if(colour.a > 0.) {
		float lum = luminance(colour);
		float diff = abs(lum - target);
		float mx = clamp(1. - diff / span, 0., 1.);
		colour = mix(colour, tint, mx);
	}
	
	COLOR = colour;
}"

[sub_resource type="ShaderMaterial" id=18]
shader = SubResource( 17 )
shader_param/speed = 0.5
shader_param/tint = Color( 1, 1, 0, 1 )
shader_param/span = 0.3

[sub_resource type="CircleShape2D" id=16]
radius = 32.9848

[node name="DblJumpBonus" type="Area2D"]
collision_layer = 16
script = ExtResource( 1 )

[node name="AnimatedSprite" type="Sprite" parent="."]
material = SubResource( 18 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="AnimatedSprite"]
margin_left = -32.0
margin_top = -31.0
margin_right = -16.0
margin_bottom = 2.0
theme = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
text = "1"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 16 )

[node name="Tween" type="Tween" parent="."]

[node name="bonus" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_DblJumpBonus_body_entered"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
